# relay-ui-kit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  STANDARDS.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/composites/: Cargo.toml
crates/core/: Cargo.toml
crates/foundation/: Cargo.toml
crates/gallery/: Cargo.toml
crates/gallery/src/: gallery.rs  main.rs  workbench_demo.rs
crates/gallery/src/gallery/: command_scene.rs  core_scene.rs  foundations_scene.rs  patterns_scene.rs  review_scene.rs  settings_scene.rs  shared.rs  stress_scene.rs  terminal_scene.rs  viewer_samples.rs  workbench_samples.rs
crates/gallery/src/workbench_demo/: center.rs  context.rs  data.rs  rail.rs
crates/patterns/: Cargo.toml
crates/relay/: ADAPTATION_PLAN.md  Cargo.toml  MIGRATION_PLAN.md  README.md  README_zh.md
crates/relay/examples/: binding.rs  branch_subviews.rs  command_picker.rs  component_hooks.rs  context.rs  counter.rs  derived.rs  effect.rs  effect_cleanup.rs  form.rs  keyed_subviews.rs  mutation.rs  ordered_selection.rs  reactive_struct.rs  resource.rs  session_surface.rs  signal_vec.rs  source_mutation.rs  source_resource.rs  subview.rs  tree_projection.rs  untrack.rs  watch.rs
crates/relay/src/: binding.rs  context.rs  effect.rs  form.rs  hooks.rs  keyed.rs  lib.rs  memo.rs  resource.rs  runtime.rs  selected_item.rs  selector.rs  signal.rs  signal_vec.rs  view.rs  window_ext.rs
crates/relay/src/composables/: focus.rs  form_model.rs  mod.rs  mutation.rs  query.rs  selection.rs  tree.rs
crates/relay/tests/: reactive_derive.rs
crates/relay_gallery/: Cargo.toml
crates/relay_gallery/src/: gallery.rs  main.rs  workbench_demo.rs
crates/relay_gallery/src/gallery/: command_scene.rs  foundations_scene.rs  product_samples.rs  review_scene.rs  settings_scene.rs  shared.rs  stress_scene.rs  terminal_scene.rs  viewer_samples.rs  workbench_samples.rs
crates/relay_gallery/src/workbench_demo/: center.rs  context.rs  data.rs  rail.rs
crates/relay_macros/: Cargo.toml
crates/relay_ui_kit/: Cargo.toml
crates/relay_uikit/: Cargo.toml
crates/relay_uikit/src/: component_prelude.rs  interaction.rs  lib.rs
crates/relay_uikit/src/components/: button.rs  button_like.rs  icon.rs  mod.rs
crates/relay_uikit/src/components/choice/: checkbox.rs  mod.rs  radio.rs  toggle.rs
crates/relay_uikit/src/components/controls/: color_picker.rs  disclosure.rs  filter.rs  mod.rs  segmented_control.rs  slider.rs  stepper.rs  swatch.rs  theme_preview.rs
crates/relay_uikit/src/components/display/: badge.rs  count_badge.rs  divider.rs  label.rs
crates/relay_uikit/src/components/feedback/: progress_bar.rs  shared.rs  toast.rs
crates/relay_uikit/src/components/input/: mod.rs  number_input.rs  platform_input.rs  search_field.rs  state.rs  text_area.rs  text_input.rs
crates/relay_uikit/src/components/list/: for_each.rs  item.rs  mod.rs  sectioned_list.rs  tree_view.rs
crates/relay_uikit/src/components/row/: mod.rs  nav_row.rs  tree_row.rs
crates/relay_uikit/src/patterns/: command_menu.rs  diff_view.rs  file_viewer.rs  input_composer.rs  markdown_viewer.rs  mod.rs  output_line.rs  output_log.rs  output_resource.rs  output_surface.rs  quick_action.rs  session_row.rs  source_view.rs  tab_strip.rs  tab_toolbar.rs  task_row.rs
crates/relay_uikit/src/patterns/command/: command_palette.rs  command_row.rs  keybinding_actions.rs  keybinding_table.rs  mod.rs
crates/relay_uikit/src/patterns/display/: mod.rs
crates/relay_uikit/src/patterns/layout/: list_section.rs  mod.rs
crates/relay_uikit/src/patterns/layout/shell/: mod.rs  status_bar.rs
crates/relay_uikit/src/patterns/layout/shell/split_pane/: drag.rs  handle.rs  handlers.rs  mod.rs  state.rs
crates/relay_uikit/src/patterns/layout/shell/title_bar/: window_controls.rs
crates/relay_uikit/src/patterns/navigation/: tabs.rs
crates/relay_uikit/src/patterns/overlay/: anchored_overlay.rs  context_menu.rs  dropdown_menu.rs  floating_overlay.rs  mod.rs  popover.rs  select.rs
crates/relay_uikit/src/patterns/overlay/dialog/: confirm.rs  mod.rs  panel.rs
crates/relay_uikit/src/patterns/overlay/menu/: item.rs  mod.rs
crates/relay_uikit/src/patterns/picker/: actions_menu.rs  item_picker.rs  mod.rs  picker_panel.rs  picker_types.rs
crates/relay_uikit/src/patterns/scroll_surface/: mod.rs  scrollbar.rs  state.rs  thumb.rs
crates/relay_uikit/src/styles/: motion.rs
crates/relay_uikit/src/workbench/: composer.rs  launcher.rs  mod.rs  task_row.rs
crates/relay_uikit/src/workbench/git/branch/: actions_menu.rs  mod.rs  panel.rs  selector.rs
crates/relay_uikit/src/workbench/terminal/: agent_quick_launch.rs  line.rs  mod.rs  session_row.rs  surface.rs  tab.rs  transcript.rs
crates/relay_uikit/src/workbench/viewer/: code_view.rs  markdown_view.rs
crates/relay_workbench_ui/: Cargo.toml
crates/relay_workbench_ui/src/: lib.rs
crates/relay_workbench_ui/src/workbench/: composer.rs  launcher.rs
crates/relay_workbench_ui/src/workbench/git/branch/: actions_menu.rs  panel.rs  selector.rs  types.rs
crates/relay_workbench_ui/src/workbench/terminal/: agent_quick_launch.rs  line.rs  session_row.rs  status_badge.rs  surface.rs  tab.rs  toolbar.rs  transcript.rs
crates/relay_workbench_ui/src/workbench/viewer/: code_view.rs  diff_view.rs  file_view.rs  markdown_view.rs
crates/workbench/: Cargo.toml
crates/workbench/src/: lib.rs
crates/workbench/src/workbench/: composer.rs  launcher.rs  task_row.rs
crates/workbench/src/workbench/git/branch/: actions_menu.rs  panel.rs  selector.rs  types.rs
crates/workbench/src/workbench/terminal/: agent_quick_launch.rs  line.rs  session_row.rs  status_badge.rs  surface.rs  tab.rs  toolbar.rs  transcript.rs
crates/workbench/src/workbench/viewer/: code_view.rs  diff_view.rs  file_view.rs  markdown_view.rs
docs/: relay-architecture.md  relay-gpui-evidence.md  relay-redesign.md  relay-uikit-audit.md  relay-uikit-guidelines.md  relay-v2-implementation-plan.md  relay-v2-rfc.md  relay-web-reinforcement-opportunities.md
script/: ci-check  clear-target-dir-if-larger-than
(+311 files in other folders)
