[workspace]
resolver = "2"
members = ["crates/relay_ui_kit", "crates/relay_gallery"]
default-members = ["crates/relay_gallery"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "6febe1c45a6d4b5460678a69b4eea497aa1f89ad", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "6febe1c45a6d4b5460678a69b4eea497aa1f89ad", package = "gpui_platform" }
pulldown-cmark = "0.13.4"
relay_ui_kit = { path = "crates/relay_ui_kit" }
similar = "2"
unicode-segmentation = "1.13"
