[workspace]
resolver = "2"
members = [
    "crates/relay_ui_primitives",
    "crates/relay_ui_components",
    "crates/relay_workbench_ui",
    "crates/relay_gallery",
]
default-members = ["crates/relay_gallery"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"
unused_qualifications = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"

# --- Build profiles ---
# See .cargo/config.toml for rustflags and aliases.

[profile.dev]
incremental = true
debug = "limited"            # line-number debuginfo only — fast compile, usable backtraces
split-debuginfo = "unpacked" # .pdb separate from .exe, faster linking on Windows

[profile.dev.build-override]
debug = "limited"
split-debuginfo = "unpacked"

[profile.release]
debug = "limited"            # keep line numbers in panics
lto = "thin"                 # ThinLTO: good speed/size balance
codegen-units = 1            # maximize optimization
strip = "symbols"            # strip debug symbols from binary
panic = "abort"              # smaller binary, no unwind machinery

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16           # fast compilation, good for local perf testing

[profile.ci]
inherits = "dev"
incremental = false          # CI runners are ephemeral — no incremental cache

[workspace.dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "6febe1c45a6d4b5460678a69b4eea497aa1f89ad", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "6febe1c45a6d4b5460678a69b4eea497aa1f89ad", package = "gpui_platform" }
pulldown-cmark = "0.13.4"
relay_ui_primitives = { path = "crates/relay_ui_primitives" }
relay_ui_components = { path = "crates/relay_ui_components" }
relay_workbench_ui = { path = "crates/relay_workbench_ui" }
similar = "2"
unicode-segmentation = "1.13"
