[package]
name = "relay_gallery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "relay_gallery"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
relay_composites.workspace = true
relay_foundation.workspace = true
relay_workbench.workspace = true
