[package]
name = "relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
relay_macros.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
gpui_platform.workspace = true
