[package]
name = "relay_gallery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "relay_gallery"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
relay_ui_components.workspace = true
relay_ui_primitives.workspace = true
relay_workbench_ui.workspace = true
