[package]
name = "relay_workbench_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
pulldown-cmark.workspace = true
relay_ui_components.workspace = true
relay_ui_primitives.workspace = true
similar.workspace = true
