[package]
name = "relay_workbench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
pulldown-cmark.workspace = true
relay_composites.workspace = true
relay_foundation.workspace = true
similar.workspace = true
